clusters/nishir/overlays/tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: flux
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: flux
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: flux-system
