clusters/nishir/overlays/tailnet/patch-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flux
  namespace: flux-system
